# libcamera2d

./: .clang-format  .gitignore  CMakeLists.txt  NOTES_AND_TODOS  README.md
cmake/: FindSDL2.cmake
include/libcamera2d/: Camera.hpp  Camera_staticOffsetFromTarget.hpp  Object2D.hpp  camera.hpp  libcamera2d.hpp
include/scrollingcamera/: scrollingcamera.hpp
lib/: CMakeLists.txt
lib/include/libcamera2d/: Camera.hpp  Camera_positionLocking.hpp  Object1D.hpp  Object2D.hpp  ObjectDimension.hpp  ObjectDimensionGenerator.hpp  Offset.hpp  PositionLocking.hpp  libcamera2d.hpp
lib/src/: Camera.cpp  Camera_positionLocking.cpp  Object1D.cpp  Object2D.cpp  ObjectDimension.cpp  ObjectDimensionGenerator.cpp  Offset.cpp  PositionLocking.cpp
samples/: CMakeLists.txt  SdlException.cpp  SdlException.hpp  Tilemap.cpp  Tilemap.hpp
samples/01_basics/: CMakeLists.txt  Player.cpp  Player.hpp  main.cpp  tilemap_data.hpp
samples/02_simplePlatformer/: CMakeLists.txt  Player.cpp  Player.hpp  main.cpp  tilemap_data.hpp
src/: CMakeLists.txt  Camera.cpp  Camera_staticOffsetFromTarget.cpp  Object2D.cpp  camera.cpp  camera2d.cpp  camera_staticOffsetFromTarget.cpp  libcamera2d.cpp  scrollingcamera.cpp
